--- a/demos/custom-basemap-gallery/app/css/CustomBasemapGallery.css
+++ b/demos/custom-basemap-gallery/app/css/CustomBasemapGallery.css
@@ -1,8 +1,17 @@
 .custom-basemap-gallery {
   background: transparent;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.custom-basemap-gallery__scene {
+.esri-widget.custom-basemap-gallery {
+  box-shadow: none;
+}
+
+.custom-basemap-gallery__dice-scene {
   perspective: 400px;
 }
 
@@ -13,103 +22,190 @@
 
   transform-style: preserve-3d;
   cursor: pointer;
+  transform: rotateX(45deg);
 }
 
 .custom-basemap-gallery__dice-face {
-  border: 2px solid #07135e;
   position: absolute;
   height: inherit;
   width: inherit;
-  font-size: 3em;
+  font-size: 2.3em;
   font-weight: bolder;
   -webkit-text-fill-color: ghostwhite;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #07135e;
-  background: rgba(26, 45, 171, 0.75);
-  background-image: url("../images/scratched-texture-invert.png");
-  background-size: contain;
+  backface-visibility: hidden;
 }
 
 .custom-basemap-gallery__dice-face:before {
   height: inherit;
   display: flex;
+  padding-top: 2px;
+  padding-right: 2px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   justify-content: center;
   align-items: center;
-  align-content: center;
 }
 
-.custom-basemap-gallery__dice-face--top {
-  transform: rotateX(90deg) translate3d(0, 0, 25px);
+.pentagon polygon {
+  stroke-width: 20px;
+  stroke: #07135e;
+  fill: rgba(26, 45, 171, 0.95);
 }
 
-.custom-basemap-gallery__dice-face--top:before {
-  content: "5";
+/* dice faces */
+
+.custom-basemap-gallery__dice-face--1 {
+  transform: rotateY(142deg)  rotateX(23.313deg) rotateZ(180deg) translate3d(0, 0, 36px);
 }
 
-.custom-basemap-gallery__dice-face--bottom {
-  transform: rotateX(-90deg) translate3d(0, 0, 25px);
-}
-
-.custom-basemap-gallery__dice-face--bottom:before {
-  content: "2";
-}
-
-.custom-basemap-gallery__dice-face--left {
-  transform: rotateY(-90deg) translate3d(0, 0, 25px);
-}
-
-.custom-basemap-gallery__dice-face--left:before {
-  content: "3";
-}
-
-.custom-basemap-gallery__dice-face--right {
-  transform: rotateY(90deg) translate3d(0, 0, 25px);
-}
-
-.custom-basemap-gallery__dice-face--right:before {
-  content: "4";
-}
-
-.custom-basemap-gallery__dice-face--front {
-  transform: translate3d(0, 0, 25px);
-}
-
-.custom-basemap-gallery__dice-face--front:before {
+.custom-basemap-gallery__dice-face--1:before {
   content: "1";
 }
 
-.custom-basemap-gallery__dice-face--back {
-  transform: rotateX(180deg) translate3d(0, 0, 25px);
+.custom-basemap-gallery__dice-face--2 {
+  transform: rotateY(72deg) rotateX(23.313deg) rotateZ(180deg) translate3d(0, 0, 36px);
 }
 
-.custom-basemap-gallery__dice-face--back:before {
+.custom-basemap-gallery__dice-face--2:before {
+  content: "2";
+}
+
+.custom-basemap-gallery__dice-face--3 {
+  transform:  rotateX(23.313deg)  rotateZ(180deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--3:before {
+  content: "3";
+}
+
+.custom-basemap-gallery__dice-face--4 {
+  transform: rotateY(288deg) rotateX(23.313deg) rotateZ(180deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--4:before {
+  content: "4";
+}
+
+.custom-basemap-gallery__dice-face--5 {
+  transform: rotateY(216deg) rotateX(23.313deg) rotateZ(180deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--5:before {
+  content: "5";
+}
+
+.custom-basemap-gallery__dice-face--6 {
+  display: unset;
+  transform: rotateX(90deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--6:before {
   content: "6";
+}
+
+.custom-basemap-gallery__dice-face--7 {
+  transform: rotateY(106deg)  rotateX(-23.313deg) rotateZ(0deg)translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--7:before {
+  content: "7";
+}
+
+.custom-basemap-gallery__dice-face--8 {
+  transform: rotateY(36deg)  rotateX(-23.313deg) rotateZ(0deg)translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--8:before {
+  content: "8";
+}
+
+.custom-basemap-gallery__dice-face--9 {
+  transform: rotateY(-36deg) rotateX(-23.313deg) rotateZ(0deg)translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--9:before {
+  content: "9";
+}
+.custom-basemap-gallery__dice-face--10 {
+  transform: rotateY(252deg) rotateX(-23.313deg) rotateZ(0deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--10:before {
+  content: "10";
+}
+
+.custom-basemap-gallery__dice-face--11 {
+  transform: rotateY(180deg) rotateX(-23.313deg) rotateZ(0deg)translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--11:before {
+  content: "11";
+}
+
+.custom-basemap-gallery__dice-face--12 {
+  display: unset;
+  transform: rotateX(-90deg) translate3d(0, 0, 36px);
+}
+
+.custom-basemap-gallery__dice-face--12:before {
+  content: "12";
+}
+
+/* selected dice */
+
+.custom-basemap-gallery__dice--1-selected {
+  transform: rotateX(205deg) rotateY(38deg);
+}
+
+.custom-basemap-gallery__dice--2-selected {
+  transform: rotateX(205deg) rotateY(110deg);
+}
+
+.custom-basemap-gallery__dice--3-selected {
+  transform: rotateX(205deg) rotateY(180deg);
+}
+
+.custom-basemap-gallery__dice--4-selected {
+  transform: rotateX(205deg) rotateY(255deg);
+}
+
+.custom-basemap-gallery__dice--5-selected {
+  transform: rotateX(205deg) rotateY(-33deg);
+}
+
+.custom-basemap-gallery__dice--6-selected {
+  transform: rotateX(270deg);
+}
+
+.custom-basemap-gallery__dice--7-selected {
+  transform: rotateX(23deg) rotateY(-105deg);
+}
+
+.custom-basemap-gallery__dice--8-selected {
+  transform: rotateX(23deg) rotateY(-36deg);
+}
+
+.custom-basemap-gallery__dice--9-selected {
+  transform: rotateX(23deg) rotateY(36deg);
+}
+
+.custom-basemap-gallery__dice--10-selected {
+  transform: rotateX(32deg) rotateY(105deg);
+}
+
+.custom-basemap-gallery__dice--11-selected {
+  transform: rotateX(23deg) rotateY(180deg);
+}
+
+.custom-basemap-gallery__dice--12-selected {
+  transform: rotateX(90deg);
 }
 
 .custom-basemap-gallery__dice--rolling {
   animation: rolling 750ms linear;
-}
-
-.custom-basemap-gallery__dice--top-selected {
-  transform: rotateX(-90deg);
-}
-
-.custom-basemap-gallery__dice--bottom-selected {
-  transform: rotateX(90deg);
-}
-
-.custom-basemap-gallery__dice--front-selected {}
-
-.custom-basemap-gallery__dice--back-selected {
-  transform: rotateX(180deg);
-}
-
-.custom-basemap-gallery__dice--left-selected {
-  transform: rotateY(90deg);
-}
-
-.custom-basemap-gallery__dice--right-selected {
-  transform: rotateY(-90deg);
 }
 
 @keyframes rolling {
