--- a/demos/custom-theme/main.scss
+++ b/demos/custom-theme/main.scss
@@ -3,24 +3,10 @@
 */
 
 //  Main Colors Vars
-$font-color: #3a5fe5 !default;
-$background-color: #1e0707 !default;
-$interactive-font-color: #ff1515 !default;
-
-$heading-color: #ff1515 !default;
-
-$border-color: #333;
-
-// Active
-$border-color--active: #073e1e !default;
-$background-color--active: #1e193c !default;
-
-// inverse
-$interactive-font-color--inverse: #1e0707;
-$background-color--inverse: #3a5fe5;
-
-// Buttons
-$button-color: #ff1515 !default;
+$font-color: #3a5fe5;
+$interactive-font-color: #ff1515;
+$background-color: #1e0707;
+$button-color: #ff1515;
 
 // Font
 $font-title: "BenguiatITCW01-BoldCn";
