--- a/slides/css/slides.css
+++ b/slides/css/slides.css
@@ -1,5 +1,28 @@
+.reveal section img {
+  border: none;
+  background: none;
+  box-shadow: none;
+}
+
+.reveal code {
+  color: orange;
+  font-style: italic;
+}
+
 .reveal h1 {
-  font-size: 2em;
+  font-size: 2.8em;
+}
+
+.reveal h2 {
+  font-size: 1.8em;
+}
+
+.reveal h3 {
+  font-size: 1.4em;
+}
+
+.reveal h4 {
+  font-size: 1.2em;
 }
 
 .floating {
@@ -7,7 +30,7 @@
 }
 
 @keyframes floaty {
-  from{
+  from {
     transform: translate(0, -10px);
   }
   to {
